        #111 - Add more informative messages and logging
        #221 - Google Provider: Scopes updated
        #261 - Check if $params is_array
        #265 - OAuth multipart support added
        #266 - Twitter Provider: setUserStatus() message and picture support
        #267 - fixed adapter undefined indexes and illegal string offsets (issues #200 and #105)

2.2.2 - July 11 2014
	#239 Fixes to Disqus provider, which now works properly (the old one was not working)
	#234 Error fix for when you don't have friends in G+ and try using getUsersContacts()
        #226 Fixing fatal error in Yammer Provider
        #227 + #229 Github: getUserProfile() does not contain email address fix
        #236 + #237 OAuth1Client: Allow to set a request body and a content type
	#241 Updates to Install.php
	#208 Updating and fixing examples
	#244 OAuth if the class already exists, use the current class
	#246 Fixing version numbers
        Few small fixes and updates to the examples
	
2.2.1 - May 26 2014
        #213 - Hotfix for undefined variable 
        #215 - Hotfix for BYO Storage Mechanism

2.2.0 - May 24 2014
        New provider: Yammer
        New provider: freeagent.com
        New provider: Drupal OAuth 2
        New provider: PayPal OAuth 2
        New provider: PayPal OpenID
        Removed provider: MySpace
        Fixes and updates to the following providers: Foursquare, Yandex, Disqus, Vkontakte, Steam, Odnoklassniki.ru, LinkedIn, Facebook, Twitter
        Log curl_exec error for failure tracing
        If log file does not exists it will be created
        Typo fixes
        Many other little changes and fixes
        Enabled to have your own storage mechanism #164
        


2.1.1 - 29 dec 2012 
	#59 - Remove OAuth PECL conflict with OAuth PHP Library
	#70 - Update Facebook PHP SDK (v.3.2.2)
	#63 - Minor change to fix getCurrentUrl()
	#73 - Fix misspellings of "authentication" and "valid"; me english bad ;
	#48 + #62 + #71 - Minor change to remove PHP Notices